fix scrollbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,38 @@
+app-notice {
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    width: 100%;
+}
+
+app-cookies-popup {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    background-color: red;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    z-index: 2;
+}
+
+app-intro {
+    position: fixed;
+    z-index: 3;
+    background-color: black;
+    height: 100%;
+    width: 100%;
+}
+
+app-home {
+    display: flex;
+    flex-direction: column;
+}
+
 // Temporal under construction in PRODUCTION (master)
 
 .under-construction {
@@ -8,7 +43,7 @@
     z-index: 1;
     background-color: rgba(0, 0, 0, 0.448);
     height: 100%;
-    width: 100vw;
+    width: 100%;
     backdrop-filter: blur(6px);
     color: white;
     font-size: 19px;
