--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -2,14 +2,14 @@
     position: fixed;
     top: 0px;
     height: 70px;
-    width: calc(100vw - 100px);
+    width: calc(100% - 100px);
     padding: 0 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 
     @media (max-width: 450px) {
-        width: calc(100vw - 40px);
+        width: calc(100% - 40px);
         padding: 0 20px;
     }
 
