--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,13 @@ body {
     height: 100vh; /* Fallback for browsers that do not support Custom Properties */
     height: calc(var(--vh, 1vh) * 100);
     overflow-y: scroll;
+    width: 100vw;
+
+    &::-webkit-scrollbar {
+        display: none;
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+    }
 }
 
 .logo-container {
